--- a/index.html
+++ b/index.html
@@ -1,164 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <!--
-      Springfield Audio Company
-      Homepage 
-	  Authors: (Case Study 9) Curtis Kesner, Jason Stass, George Polivka, Chase Dickerson
-	  Date: 9-8-2017    
-      Filename: Index.htm
-   -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Springfield Audio COMPANY</title>
+		<head>
+			<!--
+				Springfield Audio Company
+				Author:
+				Date last worked on:
+				File Name;
+			-->
+			<!-- Required meta tags -->
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+			<title>Springfield Audio Company Inc.</title>
 
-    <!-- Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
-	 <link rel="stylesheet" type="text/css" href="theme.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!--<link rel="stylesheet" type="text/css" href="css/custom.css">-->
-<link rel="stylesheet" type="text/css" href="styles.css">
-<style type="text/css">
-	div#allProductsBtn {
-		color: silver;
-	}
-	div.row {
-		margin: 0 auto;
-		padding: 16px 40px;
-	}
-	div.topnav a {
-	   padding: 18px;
-	}
-	div.topnav {
-		color: #F8F8F8;
-		background-color: silver;
-		text-align: center;
-		font-size: 18px;
-		padding: 4px 10px;
-	}
-	body {
-		background-color: silver;
-	}
-	div.container {
-		background-color: #1a5266;
-	}
-	div.row h1 {
-		background-image: url("images/equalizer.jpg");
-		text-align: center;
-		color: #ffcc66;
-		padding: 20px 40px;
-	div.carousel-inner {
-		padding: 18px;
-	}
-</style>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<script src="modernizr.custom.05819.js"></script>
-  </head>
+			<!-- Bootstrap CSS -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+			<link rel="stylesheet" href="styles.css">
+		</head>
+	
 	<body>
 		<div class="container">
 			<div class="row">
-				<h1>SPRINGFIELD AUDIO COMPANY</h1>
+				<div class="col-sm-12">
+					<h1>SPRINGFIELD AUDIO COMPANY</h1>
+				</div>
 			</div>
-			
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="topnav" id="myTopnav">
-  <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Products
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li id="allProductsBtn"><a href="#">All Products</a></li>
-    <li id="audioCassettesBtn"><a href="#">Audio Cassettes</a></li>
-    <li id="digitalMediaBtn"><a href="#">Digital Media packaging</a></li>
-    <li role="separator" class="divider"></li>
-    <li id="contactUsBtn"><a href="#">Contact Us</a></li>
-  </ul>
-<a href="#home">Home</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
-</div>
-  <!--<div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Products
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li id="allProductsBtn"><a href="#">All Products</a></li>
-    <li id="audioCassettesBtn"><a href="#">Audio Cassettes</a></li>
-    <li id="digitalMediaBtn"><a href="#">Digital Media packaging</a></li>
-    <li role="separator" class="divider"></li>
-    <li id="contactUsBtn"><a href="#">Contact Us</a></li>
-  </ul>
-</div>-->
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="topnav" id="myTopnav">
+						<div class="dropdown">
+							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+								Products
+								<span class="caret"></span>
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+								<li id="allProductsBtn"><a href="#">All Products</a></li>
+								<li id="audioCassettesBtn"><a href="#">Audio Cassettes</a></li>
+								<li id="digitalMediaBtn"><a href="#">Digital Media packaging</a></li>
+								<li role="separator" class="divider"></li>
+								<li id="contactUsBtn"><a href="#">Contact Us</a></li>
+							</ul>
+							<a href="#home">Home</a>
+							<a href="#contact">Contact</a>
+							<a href="#about">About</a>
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div class="row">
+				<div id="myCarousel" class="carousel" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					</ol>
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="../../SpringfieldAudioV2/images/HPCarousel_AudioGirl_Cassettes.png" width="100%">
+						</div>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images/HPCarousel_AudioGirl_Cassettes.png" width="100%">
-    </div>
+						<div class="item">
+							<img src="../../SpringfieldAudioV2/images/HPCarousel_Church_DigiMedia.png" width="100%">
+						</div>
 
-    <div class="item">
-      <img src="images/HPCarousel_Church_DigiMedia.png" width="100%">
-    </div>
+						<div class="item">
+							<img src="../../SpringfieldAudioV2/images/HPCarousel_Engineers_Products.png" width="100%">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12">
+							<img src="../../SpringfieldAudioV2/images/CarouselNav.jpg" width="100%">
+						</div> 
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG1_Cassettes.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG2_CassPkg.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG3_CassDupl.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG4_DigiMedia.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG6_DigiDupl.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG1_Cassettes.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG2_CassPkg.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG3_CassDupl.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG4_DigiMedia.png">
+					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG6_DigiDupl.png">
+				</div>
+			</div>
+		</div><!--End main body container-->
 
-    <div class="item">
-      <img src="images/HPCarousel_Engineers_Products.png" width="100%">
-    </div>
-  </div>
- 
- <div class="row">
-	<img src="images/CarouselNav.jpg" width="100%"> 
-</div>
-</div>
-		<div class="row">
-		<img src="images/PAGE1_CAT_IMG1_Cassettes.png">
-			<img src="images/PAGE1_CAT_IMG2_CassPkg.png">
-			<img src="images/PAGE1_CAT_IMG3_CassDupl.png">
-			<img src="images/PAGE1_CAT_IMG4_DigiMedia.png">
-			<img src="images/PAGE1_CAT_IMG6_DigiDupl.png">
-		</div>
-		<div class="row">
-		<img src="images/PAGE1_CAT_IMG1_Cassettes.png">
-			<img src="images/PAGE1_CAT_IMG2_CassPkg.png">
-			<img src="images/PAGE1_CAT_IMG3_CassDupl.png">
-			<img src="images/PAGE1_CAT_IMG4_DigiMedia.png">
-			<img src="images/PAGE1_CAT_IMG6_DigiDupl.png">
-		</div>
-			
-		</div>
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script>
-	  document.getElementById("contactUsBtn").addEventListener("click", function() {
-		alert("Contact Us Page is Coming Soon.  Please come back later!");
-		}, false);
-		document.getElementById("allProductsBtn").addEventListener("click", function() {
-		alert("All Products Page is Coming Soon.  Please come back later!");
-		}, false);
-		document.getElementById("audioCassettesBtn").addEventListener("click", function() {
-		alert("Audio Cassettes Page is Coming Soon.  Please come back later!");
-		}, false);
-		document.getElementById("digitalMediaBtn").addEventListener("click", function() {
-		alert("Digital Media Packaging Page is Coming Soon.  Please come back later!");
-		}, false);
-   </script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	</body>
 </html>
