--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<!-- Bootstrap CSS -->
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 			<link rel="stylesheet" href="styles.css">
+			<script src="sac.js"></script>
 		</head>
 	
 	<body>
@@ -48,51 +49,61 @@
 				</div>	
 			</div>
 			<div class="row">
-				<div id="myCarousel" class="carousel" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
+				<div class="col-sm-12">
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
 						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 						<li data-target="#myCarousel" data-slide-to="1"></li>
 						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
-						<div class="item active">
-							<img src="../../SpringfieldAudioV2/images/HPCarousel_AudioGirl_Cassettes.png" width="100%">
+					  </ol>
+					  <div class="carousel-inner">
+						<div class="carousel-item active">
+						  <img class="d-block w-100" src="images/HPCarousel_AudioGirl_Cassettes.png" alt="First slide" width="100%">
 						</div>
-
-						<div class="item">
-							<img src="../../SpringfieldAudioV2/images/HPCarousel_Church_DigiMedia.png" width="100%">
+						<div class="carousel-item">
+						  <img class="d-block w-100" src="images/HPCarousel_Church_DigiMedia.png" alt="Second slide" width="100%">
 						</div>
-
-						<div class="item">
-							<img src="../../SpringfieldAudioV2/images/HPCarousel_Engineers_Products.png" width="100%">
+						<div class="carousel-item">
+						  <img class="d-block w-100" src="images/HPCarousel_Engineers_Products.png" alt="Third slide" width="100%">
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<img src="../../SpringfieldAudioV2/images/CarouselNav.jpg" width="100%">
-						</div> 
+					  </div>
+					  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					  </a>
+					  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					  </a>
 					</div>
 				</div>
 			</div>
+			
+			<script>
+			// for (var i = 0; i<= products.length; i++)
+			//	 document.write ('<img src="'+products[i].image+'" >');
+			
+			/*for (var i = 0; i<= 1; i++){
+				document.write('<div class="row">'
+							  +'<img src=" ' + products[i].image + ' "> '
+							  +"</div>");*/
+			
+			
+			
+			</script>
 			<div class="row">
-				<div class="col-12">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG1_Cassettes.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG2_CassPkg.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG3_CassDupl.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG4_DigiMedia.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG6_DigiDupl.png">
-				</div>
+				<script>
+					for (var i = 0; i<= 3; i++){
+						document.write ('<img src="'+products[i].image+'" >');
+					}
+				</script>
 			</div>
 			<div class="row">
-				<div class="col-12">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG1_Cassettes.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG2_CassPkg.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG3_CassDupl.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG4_DigiMedia.png">
-					<img src="../../SpringfieldAudioV2/images/PAGE1_CAT_IMG6_DigiDupl.png">
-				</div>
+				<script>
+					for (var i = 4; i<= 7; i++){
+						document.write ('<img src="'+products[i].image+'" >');
+					}
+				</script>
 			</div>
 		</div><!--End main body container-->
 
